--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -8,4 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
 </Project>
