--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
+	  <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
