--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>ATM</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.17" />
     <PackageReference Include="Prism.Unity" Version="8.0.0.1909" />
   </ItemGroup>
   <ItemGroup>
